Handle detections with no measurements
Former-commit-id: ee52fbdf86ec0398dc66878b49c4417fb74af98d

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -64,7 +64,7 @@
     "from vasca.field import BaseField\n",
     "import vasca.visualization as vvis\n",
     "\n",
-    "from vasca.utils import mag2flux,sel_sources\n",
+    "from vasca.utils import mag2flux, sel_sources, dd_filter2id\n",
     "\n",
     "#Setup some global setup parameters that usually don't need to be adjusted\n",
     "lc_block_srcs = 5 #Setup light curve plotting parameters\n",
@@ -111,7 +111,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "49ead27849a4438ba5c291d06d587ddb",
+       "model_id": "4754ac7b47664be58826ac1fb014f4c5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -157,35 +157,50 @@
     "    \n",
     "    #If displaying visits, onle show detections in that visit\n",
     "    sel_det_rg = np.ones(len(rg.tt_detections), dtype=bool)\n",
+    "    sel_det_src = np.ones(len(tc_src.tt_detections), dtype=bool)\n",
+    "    \n",
+    "    # Preselt field detections, can be removed in the future\n",
+    "    fd_src.tt_detections = fd_src.tt_detections[fd_src.tt_detections[\"s2n\"]>0]\n",
+    "    \n",
+    "    sel_det_fd = np.ones(len(fd_src.tt_detections), dtype=bool)\n",
     "    if vis_idx > -1:\n",
     "        vis_id = fd_src.tt_visits[\"vis_id\"][vis_idx]\n",
-    "        sel_det_rg = rg.tt_detections[\"vis_id\"]==vis_id\n",
-    "        sel_det_fd = fd_src.tt_detections[\"vis_id\"]==vis_id\n",
-    "    \n",
+    "        sel_det_rg = (rg.tt_detections[\"vis_id\"]==vis_id) * (rg.tt_detections[\"obs_filter_id\"]==dd_filter2id[fd_src.obs_filter])\n",
+    "        sel_det_src = (tc_src.tt_detections[\"vis_id\"]==vis_id) * (tc_src.tt_detections[\"obs_filter_id\"]==dd_filter2id[fd_src.obs_filter])\n",
+    "\n",
+    "        fd_det_coords = SkyCoord(fd_src.tt_detections[\"ra\"][sel_det_fd], fd_src.tt_detections[\"dec\"][sel_det_fd], frame=\"icrs\")\n",
+    "        sel_det_fd = ( (fd_src.tt_detections[\"vis_id\"] == vis_id)\n",
+    "                     * (fd_src.tt_detections[\"obs_filter_id\"] == dd_filter2id[fd_src.obs_filter])\n",
+    "                     * sky_region_src.contains(fd_det_coords, wcs_src))\n",
+    "        \n",
     "    #Show sources\n",
     "    plt_ref_src_kwargs = {\"marker\": \"x\",\"markersize\": 10,\"color\":\"yellow\"}\n",
     "    _ = vvis.plot_sky_sources(rg.tt_sources,tt_det=rg.tt_detections[sel_det_rg], sky_region_wcs = (sky_region_src,wcs_src),only_selected=False) #\n",
     "    _ = vvis.plot_sky_sources(rg.tt_coadd_sources,tt_det=None, sky_region_wcs = (sky_region_src,wcs_src),only_selected=False, src_id=\"coadd_src_id\", src_kwargs = plt_ref_src_kwargs)\n",
+    "    if vis_idx > -1:\n",
+    "        plot_tds = {\"marker\":\"x\",\"color\":\"green\"}\n",
+    "        _ = vvis.plot_sky_sources(fd_src.tt_detections[sel_det_fd],src_kwargs=plot_tds, sky_region_wcs = (sky_region_src,wcs_src),  src_id=\"det_id\",only_selected=False)\n",
     "    plt.show()\n",
     "    \n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
     "    plt.cla()\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
     "    plt.show()\n",
-    "    \n",
+    "\n",
+    "    print(\"\\nSource:\")\n",
     "    display(tc_src.tt_sources[show_map_pars])\n",
     "    if \"tt_coadd_sources\" in tc_src._table_names:\n",
     "        display(tc_src.tt_coadd_sources[\"coadd_src_id\",\"flux\",\"flux_err\",\"nr_det\"])\n",
     "    print(\"\\nFields this source was detected in:\")\n",
     "    display(tc_src.tt_fields)\n",
     "    print(\"\\nDetections:\")\n",
-    "    display(tc_src.tt_detections)\n",
+    "    display(tc_src.tt_detections[sel_det_src])\n",
     "\n",
-    "# Display sources only for the shown field\n",
-    "#        sel_fd_src = (rg.tt_src_id_map[\"rg_src_id\"]==rg_src_id) * (rg.tt_src_id_map[\"rg_fd_id\"]==rg_fd_id)\n",
-    "#        fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
-    "#        print(\"\\nDetections in this field:\")\n",
-    "#        display(fd_src.tt_detections[fd_src.tt_detections[\"fd_src_id\"]==fd_src_id])\n",
+    "    # Display sources only for the shown field\n",
+    "    #fd_src_id = rg.tt_src_id_map[sel_fd_src][\"fd_src_id\"][0]\n",
+    "    if vis_idx > -1:\n",
+    "        print(\"\\nAll detections for this visit in the field:\")\n",
+    "        display(fd_src.tt_detections[sel_det_fd])\n",
     "    \n",
     "#Decide which sources to show\n",
     "list_srcs = tt_srcs[\"rg_src_id\"]\n",
@@ -198,7 +213,8 @@
     "\n",
     "controls = widgets.HBox(widget.children[:-1], layout = widgets.Layout(flex_flow='row wrap'))\n",
     "output = widget.children[-1]\n",
-    "display(widgets.VBox([controls, output]))"
+    "display(widgets.VBox([controls, output]))\n",
+    "# straight NUV, dashed FUV"
    ]
   },
   {
