added remove_unselected function
Former-commit-id: aab0a045c48330a5f60cf98b8314e4621a4ea2e4

--- a/vasca/examples/vasca_pipe_source_distributions.ipynb
+++ b/vasca/examples/vasca_pipe_source_distributions.ipynb
@@ -37,7 +37,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=42808</i>\n",
-       "<table id=\"table140354292364240\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139726329639888\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_nxv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>mag</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th></th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>int32</th><th>float32</th></tr></thead>\n",
@@ -112,14 +112,8 @@
     "region_fname = \"./vasca_pipeline/\"+region_name+\"/region_\"+region_name+\".fits\"\n",
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
-    "\n",
+    "rg.add_column(\"tt_sources\", \"mag\", flux2mag(rg.tt_sources[\"flux\"].quantity).value)\n",
     "tt_srcs = select_obs_filter(rg.tt_sources,obs_filter_id)\n",
-    "\n",
-    "#Add magnitude column\n",
-    "col_template_copy = dd_vasca_columns[\"mag\"].copy()\n",
-    "del col_template_copy[\"default\"]\n",
-    "col = Column(flux2mag(tt_srcs[\"flux\"].quantity).value, **col_template_copy)\n",
-    "tt_srcs[\"mag\"] = col\n",
     "\n",
     "display(tt_srcs)\n",
     "print(\"Nr. sources:\",len(tt_srcs),\"/\",tt_srcs[\"sel\"].sum())"
