⬆️UPGRADE: Added visual inspection veto
Former-commit-id: e8c6832b726e8ec635ca4966db662266542a632d

--- a/vasca/examples/GALEX_DS_GCK/create_GCK_visits_table.ipynb
+++ b/vasca/examples/GALEX_DS_GCK/create_GCK_visits_table.ipynb
@@ -166,7 +166,13 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "ea113364-ba6b-4170-82cd-f98ec9d5fe80",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -756,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "e5ac2850-840b-4ed1-a0dd-0a2cdbaa8b6f",
    "metadata": {},
    "outputs": [],
@@ -819,8 +825,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "10531935-86fe-4aac-b012-1b8f4b9ff7f7",
+   "execution_count": 18,
+   "id": "5faf7bfb-a86b-4882-afab-b8d6f6f382d5",
    "metadata": {
     "tags": []
    },
@@ -829,18 +835,44 @@
     "# Settings\n",
     "\n",
     "# Input/output directories\n",
-    "root_data_dir = \"/Users/julianschliwinski/GALEX_DS/GALEX_DS_GCK_fields\"\n",
-    "out_dir = \"/Users/julianschliwinski/GALEX_DS/GALEX_DS_GCK_visits_list\"\n",
+    "with vascarm.ResourceManager() as rm:\n",
+    "    root_data_dir = rm.get_path(\"gal_ds_fields\", \"lustre\")\n",
+    "    out_dir = (os.sep).join(\n",
+    "        rm.get_path(\"gal_ds_visits_list\", \"lustre\").split(os.sep)[:-1]\n",
+    "    )\n",
+    "    \n",
+    "# Load visual image quality table\n",
+    "df_img_quality = pd.read_csv(\n",
+    "    f\"{out_dir}/GALEX_DS_GCK_visits_img_quality.csv\", index_col=0\n",
+    ")\n",
+    "# List of visits with bad image quality\n",
+    "visit_is_bad = df_img_quality.query(\"quality in ['bad']\").vis_name.tolist()\n",
     "\n",
     "# Dry-run, don't export final list\n",
-    "dry_run = False\n",
-    "\n",
+    "dry_run = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "fbf741af-57e8-436f-9455-f89781f2bf4a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Loops over mcat files and saves info\n",
     "info = list()\n",
     "for path, subdirs, files in os.walk(root_data_dir):\n",
     "    for name in files:\n",
+    "        # Gets visit name\n",
     "        if name.endswith(\"-xd-mcat.fits\"):\n",
-    "            # Load mcat file and get relevant info\n",
+    "            vis_name = os.path.join(path, name).split(os.sep)[-2]\n",
+    "        else:\n",
+    "            vis_name = None\n",
+    "        # Select mcat file for visits if not bad image quality\n",
+    "        if name.endswith(\"-xd-mcat.fits\") and vis_name not in visit_is_bad:\n",
+    "            # Load mcat file and get relevant info_local\n",
     "            mcat_path = os.path.join(path, name)\n",
     "            with fits.open(mcat_path) as hdul:\n",
     "                hdr_info = get_hdr_info(hdul[0].header)\n",
