♻️FIX: Changed handling of bad visits in coadd creation script
Former-commit-id: dece671cef0f2e7d45b6bfb66dc9a0150cecacc9

--- a/vasca/examples/GALEX_DS_GCK/create_GCK_coadd.ipynb
+++ b/vasca/examples/GALEX_DS_GCK/create_GCK_coadd.ipynb
@@ -73,7 +73,11 @@
     "refresh = True\n",
     "\n",
     "# Delete an existing coadd\n",
-    "delete_existing = True"
+    "delete_existing = True\n",
+    "\n",
+    "# Store paths of created files\n",
+    "coadd_cnt_paths = list()\n",
+    "coadd_rrhr_paths = list()"
    ]
   },
   {
@@ -133,14 +137,12 @@
     }
    ],
    "source": [
-    "coadd_cnt_paths = list()\n",
-    "coadd_rrhr_paths = list()\n",
-    "\n",
     "# Loops over drift scan directories\n",
-    "scan_names = [path.split(os.sep)[-1] for path in glob(f\"{root_data_dir}/*\")]\n",
+    "scan_names = sorted([path.split(os.sep)[-1] for path in glob(f\"{root_data_dir}/*\")])\n",
+    "n_scans = len(scan_names)\n",
     "for idx_scan, scan_name in tqdm(\n",
-    "    enumerate(sorted(scan_names)),\n",
-    "    total=len(scan_names),\n",
+    "    enumerate(scan_names),\n",
+    "    total=n_scans,\n",
     "    desc=\"Scans\",\n",
     "    disable=hide_progress,\n",
     "):\n",
@@ -149,12 +151,13 @@
     "        break\n",
     "\n",
     "    # Loops over fields\n",
-    "    field_names = [\n",
-    "        path.split(os.sep)[-1] for path in glob(f\"{root_data_dir}/{scan_name}/*\")\n",
-    "    ]\n",
+    "    field_names = sorted(\n",
+    "        [path.split(os.sep)[-1] for path in glob(f\"{root_data_dir}/{scan_name}/*\")]\n",
+    "    )\n",
+    "    n_fields = len(field_names)\n",
     "    for idx_field, field_name in tqdm(\n",
-    "        enumerate(sorted(field_names)),\n",
-    "        total=len(field_names),\n",
+    "        enumerate(field_names),\n",
+    "        total=n_fields,\n",
     "        desc=f\"Fields ({scan_name})\",\n",
     "        disable=hide_progress,\n",
     "    ):\n",
@@ -162,93 +165,109 @@
     "        if idx_field > 0 and is_debug:\n",
     "            break\n",
     "\n",
-    "        # Collects file paths across all visit directories\n",
-    "        # Counts maps\n",
-    "        img_cnt_paths = glob(\n",
-    "            f\"{root_data_dir}/{scan_name}/{field_name}/*/*-nd-cnt.fits.gz\"\n",
-    "        )\n",
-    "        # Effective exposure time map\n",
-    "        img_rrhr_paths = glob(\n",
-    "            f\"{root_data_dir}/{scan_name}/{field_name}/*/*-nd-rrhr.fits.gz\"\n",
-    "        )\n",
+    "        # Selects visit names\n",
+    "        visit_names = [\n",
+    "            path.split(os.sep)[-1]\n",
+    "            for path in sorted(glob(f\"{root_data_dir}/{scan_name}/{field_name}/*-img\"))\n",
+    "        ]\n",
+    "        visit_names = [name for name in visit_names if name not in visit_is_bad]\n",
+    "        n_visits = len(visit_names)\n",
     "\n",
-    "        # Stack image maps\n",
-    "        # Loops over image types\n",
-    "        for path_list, path_out_file_suffix, coadd_path_list in zip(\n",
-    "            [img_cnt_paths, img_rrhr_paths],\n",
-    "            [\"-nd-cnt-coadd.fits.gz\", \"-nd-rrhr-coadd.fits.gz\"],\n",
-    "            [coadd_cnt_paths, coadd_rrhr_paths],\n",
-    "        ):\n",
-    "            # Path to the coadd file\n",
-    "            path_out_file = (\n",
-    "                f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
-    "                f\"{field_name}{path_out_file_suffix}\"\n",
-    "            )\n",
+    "        # Don't continue if all visits are bad\n",
+    "        if n_visits > 0:\n",
     "\n",
-    "            # Delete existing coadd file\n",
-    "            if delete_existing and os.path.isfile(path_out_file):\n",
-    "                os.remove(path_out_file)\n",
-    "                alt_path = path_out_file.rstrip(\".gz\")\n",
-    "                if os.path.isfile(alt_path):\n",
-    "                    os.remove(alt_path)\n",
+    "            img_cnt_paths = list()\n",
+    "            img_rrhr_paths = list()\n",
+    "            for visit_name in visit_names:\n",
+    "                img_cnt_path = glob(\n",
+    "                    f\"{root_data_dir}/{scan_name}/{field_name}/{visit_name}/\"\n",
+    "                    f\"*-nd-cnt.fits.gz\"\n",
+    "                )[0]\n",
+    "                img_rrhr_path = glob(\n",
+    "                    f\"{root_data_dir}/{scan_name}/{field_name}/{visit_name}/\"\n",
+    "                    f\"*-nd-rrhr.fits.gz\"\n",
+    "                )[0]\n",
+    "                img_cnt_paths.append(img_cnt_path)\n",
+    "                img_rrhr_paths.append(img_rrhr_path)\n",
     "\n",
-    "            if refresh or not os.path.isfile(path_out_file):\n",
-    "                # Loops over individual files\n",
-    "                img_counter = 0\n",
-    "                for idx_img, path in enumerate(sorted(path_list)):\n",
-    "                    # Gets visit name\n",
-    "                    vis_name = path.split(os.sep)[-2]\n",
-    "                    # Load image only if not bad quality\n",
-    "                    if vis_name not in visit_is_bad:\n",
+    "            if len(img_cnt_paths) != len(img_rrhr_paths):\n",
+    "                raise ValueError(\"Expected same number of counts and exposure maps.\")\n",
+    "\n",
+    "            # Stack image maps\n",
+    "            # Loops over image types\n",
+    "            for path_list, path_out_file_suffix, coadd_path_list in zip(\n",
+    "                [img_cnt_paths, img_rrhr_paths],\n",
+    "                [\"-nd-cnt-coadd.fits.gz\", \"-nd-rrhr-coadd.fits.gz\"],\n",
+    "                [coadd_cnt_paths, coadd_rrhr_paths],\n",
+    "            ):\n",
+    "                # Path to the output coadd file\n",
+    "                path_out_file = (\n",
+    "                    f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
+    "                    f\"{field_name}{path_out_file_suffix}\"\n",
+    "                )\n",
+    "\n",
+    "                # Delete existing coadd file\n",
+    "                if delete_existing and os.path.isfile(path_out_file):\n",
+    "                    os.remove(path_out_file)\n",
+    "                    alt_path = path_out_file.rstrip(\".gz\")\n",
+    "                    if os.path.isfile(alt_path):\n",
+    "                        os.remove(alt_path)\n",
+    "\n",
+    "                # Do stacking if coadd file does not exist or refresh is specified\n",
+    "                if refresh or not os.path.isfile(path_out_file):\n",
+    "                    # Loops over individual visits/files\n",
+    "                    for idx_img, path in enumerate(sorted(path_list)):\n",
     "                        # Initialize stack image from first file\n",
     "                        with fits.open(path) as hdul:\n",
-    "                            if img_counter == 0:\n",
+    "                            if idx_img == 0:\n",
     "                                img = hdul[0].data\n",
     "                                img_wcs = wcs.WCS(hdul[0].header)\n",
     "                            else:\n",
     "                                img += hdul[0].data\n",
-    "                        img_counter += 1\n",
     "\n",
-    "                # Export\n",
-    "                if img_counter > 0:\n",
+    "                    # Export FITS file\n",
     "                    hdu = fits.PrimaryHDU(img, header=img_wcs.to_header())\n",
     "                    hdu.writeto(path_out_file, overwrite=True)\n",
     "\n",
-    "            if img_counter > 0:\n",
+    "                # Save path of created file\n",
     "                coadd_path_list.append(path_out_file)\n",
     "\n",
-    "        # Create intensity coadd\n",
-    "        coadd_cnt_path = (\n",
-    "            f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
-    "            f\"{field_name}-nd-cnt-coadd.fits.gz\"\n",
-    "        )\n",
-    "        coadd_rrhr_path = (\n",
-    "            f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
-    "            f\"{field_name}-nd-rrhr-coadd.fits.gz\"\n",
-    "        )\n",
-    "        with fits.open(coadd_cnt_path) as hdul:\n",
-    "            img_coadd_cnt = hdul[0].data\n",
-    "            img_coadd_wcs = wcs.WCS(hdul[0].header)\n",
-    "        with fits.open(coadd_rrhr_path) as hdul:\n",
-    "            img_coadd_rrhr = hdul[0].data\n",
+    "            # Create intensity coadd\n",
     "\n",
-    "        coadd_int_path = (\n",
-    "            f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
-    "            f\"{field_name}-nd-int-coadd.fits.gz\"\n",
-    "        )\n",
+    "            # Coadd file paths\n",
+    "            coadd_cnt_path = (\n",
+    "                f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
+    "                f\"{field_name}-nd-cnt-coadd.fits.gz\"\n",
+    "            )\n",
+    "            coadd_rrhr_path = (\n",
+    "                f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
+    "                f\"{field_name}-nd-rrhr-coadd.fits.gz\"\n",
+    "            )\n",
+    "            coadd_int_path = (\n",
+    "                f\"{root_data_dir}/{scan_name}/{field_name}/\"\n",
+    "                f\"{field_name}-nd-int-coadd.fits.gz\"\n",
+    "            )\n",
     "\n",
-    "        # Delete existing coadd file\n",
-    "        if delete_existing and os.path.isfile(coadd_int_path):\n",
-    "            os.remove(coadd_int_path)\n",
-    "            alt_path = coadd_int_path.rstrip(\".gz\")\n",
-    "            if os.path.isfile(alt_path):\n",
-    "                os.remove(alt_path)\n",
+    "            # Delete existing coadd file\n",
+    "            if delete_existing and os.path.isfile(coadd_int_path):\n",
+    "                os.remove(coadd_int_path)\n",
+    "                alt_path = coadd_int_path.rstrip(\".gz\")\n",
+    "                if os.path.isfile(alt_path):\n",
+    "                    os.remove(alt_path)\n",
     "\n",
-    "        hdu = fits.PrimaryHDU(\n",
-    "            img_coadd_cnt / np.where(img_coadd_rrhr == 0, np.nan, img_coadd_rrhr),\n",
-    "            header=img_coadd_wcs.to_header(),\n",
-    "        )\n",
-    "        hdu.writeto(coadd_int_path, overwrite=True)"
+    "            # Compute ratio: Counts over effective exposure = intensity\n",
+    "            with fits.open(coadd_cnt_path) as hdul:\n",
+    "                img_coadd_cnt = hdul[0].data\n",
+    "                img_coadd_wcs = wcs.WCS(hdul[0].header)\n",
+    "            with fits.open(coadd_rrhr_path) as hdul:\n",
+    "                img_coadd_rrhr = hdul[0].data\n",
+    "\n",
+    "            # Export FITS file\n",
+    "            hdu = fits.PrimaryHDU(\n",
+    "                img_coadd_cnt / np.where(img_coadd_rrhr == 0, np.nan, img_coadd_rrhr),\n",
+    "                header=img_coadd_wcs.to_header(),\n",
+    "            )\n",
+    "            hdu.writeto(coadd_int_path, overwrite=True)"
    ]
   },
   {
