♻️FIX: Resolved an issue with FITS image compression
Former-commit-id: 1d1651aa12f14e12981487dd8ed1d546f0aa138b

--- a/vasca/examples/GALEX_DS_GCK/create_GCK_coadd.ipynb
+++ b/vasca/examples/GALEX_DS_GCK/create_GCK_coadd.ipynb
@@ -220,10 +220,10 @@
     "                        # Initialize stack image from first file\n",
     "                        with fits.open(path) as hdul:\n",
     "                            if idx_img == 0:\n",
-    "                                img = hdul[0].data\n",
+    "                                img = hdul[0].data.clip(min=0)\n",
     "                                img_wcs = wcs.WCS(hdul[0].header)\n",
     "                            else:\n",
-    "                                img += hdul[0].data\n",
+    "                                img += hdul[0].data.clip(min=0)\n",
     "\n",
     "                    # Export FITS file\n",
     "                    hdu = fits.PrimaryHDU(img, header=img_wcs.to_header())\n",
@@ -255,16 +255,15 @@
     "                if os.path.isfile(alt_path):\n",
     "                    os.remove(alt_path)\n",
     "\n",
-    "            # Compute ratio: Counts over effective exposure = intensity\n",
-    "            with fits.open(coadd_cnt_path) as hdul:\n",
-    "                img_coadd_cnt = hdul[0].data\n",
-    "                img_coadd_wcs = wcs.WCS(hdul[0].header)\n",
-    "            with fits.open(coadd_rrhr_path) as hdul:\n",
-    "                img_coadd_rrhr = hdul[0].data\n",
+    "            # Compute ratio, avoid divide-by-zero problems by setting zeros to NaN\n",
+    "            # for the computation and setting the same elements back to zeros again.\n",
+    "            # Saving NaN to FITS and using CompImageHDUs in VASCA led to corrupt images\n",
+    "            img_coadd_int = img_coadd_cnt / np.where(img_coadd_rrhr == 0.0, np.nan, img_coadd_rrhr)\n",
+    "            np.nan_to_num(img_coadd_int, copy=False)\n",
     "\n",
     "            # Export FITS file\n",
     "            hdu = fits.PrimaryHDU(\n",
-    "                img_coadd_cnt / np.where(img_coadd_rrhr == 0, np.nan, img_coadd_rrhr),\n",
+    "                img_coadd_int,\n",
     "                header=img_coadd_wcs.to_header(),\n",
     "            )\n",
     "            hdu.writeto(coadd_int_path, overwrite=True)"
