⬆️UPGRADE: Minor changes to GCK preparation tools
Former-commit-id: bf86fcb537674aa6c2de7a7b16d1f6529a03cf85

--- a/vasca/examples/GALEX_DS_GCK/create_GCK_visits_table.ipynb
+++ b/vasca/examples/GALEX_DS_GCK/create_GCK_visits_table.ipynb
@@ -48,6 +48,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e5b4e95c-a5fc-4b30-84bc-fe6b9689e59b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ef37efed-3d11-4ab1-b646-5338c98d6566",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with vascarm.ResourceManager() as rm:\n",
+    "    root_data_dir = rm.get_path(\"gal_ds_fields\", \"lustre\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "99af4da9-96e9-4dbf-9145-ab36b8691532",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['29200-KEPLER_SCAN_001_sv01',\n",
+       " '29200-KEPLER_SCAN_001_sv02',\n",
+       " '29200-KEPLER_SCAN_001_sv03',\n",
+       " '29200-KEPLER_SCAN_001_sv04',\n",
+       " '29200-KEPLER_SCAN_001_sv05',\n",
+       " '29200-KEPLER_SCAN_001_sv06',\n",
+       " '29200-KEPLER_SCAN_001_sv07',\n",
+       " '29200-KEPLER_SCAN_001_sv08',\n",
+       " '29200-KEPLER_SCAN_001_sv09',\n",
+       " '29208-KEPLER_SCAN_009_sv01',\n",
+       " '29208-KEPLER_SCAN_009_sv02',\n",
+       " '29208-KEPLER_SCAN_009_sv03',\n",
+       " '29208-KEPLER_SCAN_009_sv04',\n",
+       " '29208-KEPLER_SCAN_009_sv05',\n",
+       " '29208-KEPLER_SCAN_009_sv06',\n",
+       " '29208-KEPLER_SCAN_009_sv07',\n",
+       " '29208-KEPLER_SCAN_009_sv08',\n",
+       " '29208-KEPLER_SCAN_009_sv09',\n",
+       " '29208-KEPLER_SCAN_009_sv10',\n",
+       " '29208-KEPLER_SCAN_009_sv11',\n",
+       " '29208-KEPLER_SCAN_009_sv12',\n",
+       " '29208-KEPLER_SCAN_009_sv13',\n",
+       " '29208-KEPLER_SCAN_009_sv14']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted([path.split(os.sep)[-1] for path in glob(f\"{root_data_dir}/*/*\")])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c37673c1-9d53-407c-9831-9378bf15b6d5",
    "metadata": {},
@@ -164,13 +228,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "ea113364-ba6b-4170-82cd-f98ec9d5fe80",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
