--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 42808 / 300\n"
+      "Nr sources: 18515 / 132\n"
      ]
     }
    ],
@@ -111,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2bb0236e7934349b2ebd3682f33fa66",
+       "model_id": "b49f33503fa14e4eab5030f61697c035",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(41, 111, 138, 161, 170, 172, 192, 230…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(11, 69, 92, 160, 175, 201, 302, 315, …"
       ]
      },
      "metadata": {},
