Minor bug fixes
Former-commit-id: 6dafd24c6d92455a8de3c87c4150ea30091564a0

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 18515 / 132\n"
+      "Nr sources: 43958 / 301\n"
      ]
     }
    ],
@@ -111,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b49f33503fa14e4eab5030f61697c035",
+       "model_id": "01d99f497a9348e38b7ddd6dc31fff27",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(11, 69, 92, 160, 175, 201, 302, 315, …"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(42, 112, 139, 162, 171, 173, 193, 231…"
       ]
      },
      "metadata": {},
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
@@ -245,15 +245,15 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdbdfd0060a940199c93636f31311b1f",
+       "model_id": "c522c3bfb8ef4eb183a94786e2ab99f4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=6, description='rg_fd_id', max=13), Output()), _dom_classes=('widget-int…"
+       "interactive(children=(IntSlider(value=7, description='rg_fd_id', max=14, min=1), Output()), _dom_classes=('wid…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,10 +267,9 @@
     "    plt.cla()\n",
     "    fd = rg.get_field(rg_fd_id=rg_fd_id, load_method=\"FITS\", add_field=True)\n",
     "    ax, wcs = vvis.plot_field_sky_map(fd, img_idx=-1, sky_region = fd.get_sky_region(),fig=fig_skymap) # \n",
-    "    ax, rg_src_ids = vvis.plot_sky_sources(tt_srcs,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=False) # \n",
-    "    src_idx = tt_srcs.loc_indices[\"rg_src_id\", rg_src_ids]\n",
+    "    ax, tt_src_shown = vvis.plot_sky_sources(tt_srcs,tt_det=rg.tt_detections, sky_region_wcs = (fd.get_sky_region(),wcs),only_selected=False) # \n",
     "    plt.show()\n",
-    "    display(tt_srcs[src_idx][show_map_pars])\n",
+    "    display(tt_src_shown[show_map_pars])\n",
     "widgets.interactive( plot_sky_field, rg_fd_id=(rg.tt_fields[\"rg_fd_id\"].min(),rg.tt_fields[\"rg_fd_id\"].max()))"
    ]
   },
@@ -291,7 +290,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "38074fa15f634e9281b2728748bbf6dd",
+       "model_id": "f1f23c2877f246feb7cad27c0c175808",
        "version_major": 2,
        "version_minor": 0
       },
